# SysMonitor

./: .gitignore  README.md  project.md  pyproject.toml  start.bat
backend/: main.py  requirements.txt
backend/api/: cpu.py  disk.py  memory.py  network.py  ports.py  process.py  system.py
frontend/: app.js  index.html  style.css
frontend/api/: monitor.js
frontend/components/: CpuChart.js  InfoCard.js  MemoryChart.js
frontend/views/: Cpu.js  Dashboard.js  Disk.js  Memory.js  Network.js  Ports.js  Process.js  System.js
sysmonitor/: index.html  package-lock.json  package.json
sysmonitor/src/: App.jsx  index.css
sysmonitor/src/components/: Header.jsx  NotificationStack.jsx  Sidebar.jsx  Sparkline.jsx  ThemeProvider.jsx
sysmonitor/src/components/charts/: ChartsSection.jsx
sysmonitor/src/components/dashboard/: MetricCards.jsx  TopProcesses.jsx
sysmonitor/src/components/process/: ProcessDetailPanel.jsx  ProcessTable.jsx  TopResourceBar.jsx
sysmonitor/src/components/ui/: ContextMenu.jsx  button.jsx  card.jsx  dialog.jsx
sysmonitor/src/store/: systemStore.js
